salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/se_activity_flatcsv_1csv__dll.object-meta.xml
<CustomObject>
    <label>se_activity_flat.csv (1).csv</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>