salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/account_name__c.field-meta.xml
<CustomField>
    <fullName>account_name__c</fullName>
    <label>account_name</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>account_name</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>