salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/account_tier__c.field-meta.xml
<CustomField>
    <fullName>account_tier__c</fullName>
    <label>account_tier</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>account_tier</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>