salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/activity_date__c.field-meta.xml
<CustomField>
    <fullName>activity_date__c</fullName>
    <label>activity_date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>activity_date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>