salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/activity_id__c.field-meta.xml
<CustomField>
    <fullName>activity_id__c</fullName>
    <label>activity_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>activity_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>