salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/conversion_touchpoint_ratio__c.field-meta.xml
<CustomField>
    <fullName>conversion_touchpoint_ratio__c</fullName>
    <label>conversion_touchpoint_ratio</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>conversion_touchpoint_ratio</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>