salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/is_internal_only__c.field-meta.xml
<CustomField>
    <fullName>is_internal_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_internal_only</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>is_internal_only</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>