salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/KQ_se_id__c.field-meta.xml
<CustomField>
    <fullName>KQ_se_id__c</fullName>
    <label>KQ_se_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_se_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>