salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/manager_feedback_flag__c.field-meta.xml
<CustomField>
    <fullName>manager_feedback_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>manager_feedback_flag</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>manager_feedback_flag</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>