salesforce/retrieved/probe-dll-datetime/objects/se_activity_flatcsv_1csv__dll/fields/notes_flagged_for_followup__c.field-meta.xml
<CustomField>
    <fullName>notes_flagged_for_followup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>notes_flagged_for_followup</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>notes_flagged_for_followup</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>